--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "encoding": "^0.1.13",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
